# embedSys-finalProj

./: .gitignore  .gitmodules  MQTT_TEST_COMMANDS.md  README.md  requirements.txt
cpp/ess_stream/: CMakeLists.txt
cpp/ess_stream/src/app/: gate_logger_sink.h  hit_gate_multiframe.cpp  hit_gate_onset.cpp  hit_gate_onset.h  hit_gate_onset_vector.cpp  hit_gate_quantile.h  hit_prediction_logger.cpp  instrument_predictor.cpp  main.cpp  streaming_pipe.cpp  sumrange.cpp  sumrange.h  vector_index.cpp  vector_pack5.cpp  vector_pack5.h  zeromq_publisher.cpp  zeromq_publisher.h
docs/: INSTRUMENT_DETECTION_TUNING_GUIDE.md  LOGGING_IMPLEMENTATION_DETAILS.md  LOGGING_PLAN.md  _config.yaml  essentia_pipe.md  essentia_pipeline_diagram.md  essentia_pipeline_simple.md  index.md
src/: README.md  beat_logger.py  beat_predictor_kf.py  beatnet_streaming.py  movement_planning.py  zmq_hit_visualizer.py
src/cpp/arduino/EmbeddedDevice/: .gitignore  ARCHITECTURE.md  HARDWARE_TIMER_PLAN.md  README.md  platformio.ini
src/cpp/arduino/EmbeddedDevice/src/: main.cpp  toggle.cpp  wifi_config.h.template
src/cpp/ess_stream/: CMakeLists.txt
src/cpp/ess_stream/src/app/: gate_logger_sink.cpp  hit_gate_multiframe.h  hit_gate_onset.cpp  hit_gate_onset_vector.h  hit_gate_quantile.cpp  hit_prediction_logger.h  instrument_predictor.cpp  instrument_predictor.h  instrument_sum.cpp  instrument_sum.h  lighting_engine.cpp  lighting_engine.h  mqtt_publisher.cpp  mqtt_publisher.h  prediction_types.h  simple_streaming.cpp  streaming_pipe.cpp  vector_index.h  zeromq_publisher.cpp
src/python/: README.md  beat_visualizer.py  beatnet_streaming.py  setup_macos_audio.py  test_arduino_mqtt.py  zmq_audio_subscriber.py  zmq_hit_visualizer.py
